--- a/workflow-templates/npm-check.yml
+++ b/workflow-templates/npm-check.yml
@@ -22,14 +22,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run format
-      run: npm run format --if-present
-
-    - name: Run lint
-      run: npm run lint --if-present
-
-    - name: Run typecheck
-      run: npm run typecheck --if-present
-
-    - name: Run tests
-      run: npm run test --if-present
+    - name: Run check
+      run: npm run check --if-present
