--- a/workflow-templates/npm-check.yml
+++ b/workflow-templates/npm-check.yml
@@ -7,20 +7,5 @@ on:
     branches: [ $default-branch ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18.x'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run check
-      run: npm run check --if-present
+  check:
+    uses: soos-io/.github/workflows/npm-check-workflow.yml@main
