--- a/workflow-templates/npm-publish.yml
+++ b/workflow-templates/npm-publish.yml
@@ -18,4 +18,4 @@ jobs:
   publish:
     uses: soos-io/.github/.github/workflows/npm-publish-workflow.yml@main
     with:
-      version: ${{ github.event_name == 'workflow_dispatch' && inputs.version || github.ref_name }}
+      version: ${{ inputs.version }}
